# myoh_sensor

./: README.md
base/sensors/miscdevice/: OAT.xml  bundle.json  hisysevent.yaml  miscdevice.gni
base/sensors/miscdevice/frameworks/capi/: BUILD.gn  vibrator.cpp
base/sensors/miscdevice/frameworks/js/napi/: BUILD.gn
base/sensors/miscdevice/frameworks/native/common/include/: i_miscdevice_service.h  miscdevice_service_proxy.h  sensors_ipc_interface_code.h
base/sensors/miscdevice/frameworks/native/common/src/: miscdevice_service_proxy.cpp
base/sensors/miscdevice/frameworks/native/light/: BUILD.gn  liblight.json  light_agent.cpp
base/sensors/miscdevice/frameworks/native/light/include/: light_client.h
base/sensors/miscdevice/frameworks/native/light/src/: light_client.cpp
base/sensors/miscdevice/frameworks/native/vibrator/: BUILD.gn  libvibrator.json  vibrator_agent.cpp
base/sensors/miscdevice/frameworks/native/vibrator/include/: i_vibrator_client.h  vibrator_client_stub.h  vibrator_service_client.h
base/sensors/miscdevice/frameworks/native/vibrator/src/: vibrator_client_stub.cpp  vibrator_service_client.cpp
base/sensors/miscdevice/interfaces/inner_api/vibrator/: vibrator_agent.h  vibrator_agent_type.h
base/sensors/miscdevice/interfaces/kits/c/: vibrator.h  vibrator_type.h
base/sensors/miscdevice/sa_profile/: 3602.json  BUILD.gn
base/sensors/miscdevice/services/miscdevice_service/: BUILD.gn
base/sensors/miscdevice/services/miscdevice_service/haptic_matcher/include/: custom_vibration_matcher.h
base/sensors/miscdevice/services/miscdevice_service/haptic_matcher/src/: custom_vibration_matcher.cpp
base/sensors/miscdevice/services/miscdevice_service/include/: miscdevice_common_event_subscriber.h  miscdevice_dump.h  miscdevice_observer.h  miscdevice_service.h  miscdevice_service_stub.h  vibration_priority_manager.h  vibrator_thread.h
base/sensors/miscdevice/services/miscdevice_service/src/: miscdevice_common_event_subscriber.cpp  miscdevice_dump.cpp  miscdevice_observer.cpp  miscdevice_service.cpp  miscdevice_service_stub.cpp  vibration_priority_manager.cpp  vibrator_thread.cpp
base/sensors/miscdevice/test/fuzztest/light/startlight_fuzzer/: BUILD.gn  startlight_fuzzer.cpp
base/sensors/miscdevice/test/fuzztest/light/stoplight_fuzzer/: BUILD.gn  stoplight_fuzzer.cpp
base/sensors/miscdevice/test/fuzztest/service/: BUILD.gn
base/sensors/miscdevice/test/fuzztest/service/getdelaytimestub_fuzzer/: BUILD.gn  getdelaytimestub_fuzzer.cpp  getdelaytimestub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/getlightliststub_fuzzer/: BUILD.gn  getlightliststub_fuzzer.cpp  getlightliststub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/getvibratorcapacitystub_fuzzer/: BUILD.gn  getvibratorcapacitystub_fuzzer.cpp  getvibratorcapacitystub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/issupporteffectstub_fuzzer/: BUILD.gn  issupporteffectstub_fuzzer.cpp  issupporteffectstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/playpatternstub_fuzzer/: BUILD.gn  playpatternstub_fuzzer.cpp  playpatternstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/playprimitiveeffectstub_fuzzer/: BUILD.gn  playprimitiveeffectstub_fuzzer.cpp  playprimitiveeffectstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/playvibratorcustomstub_fuzzer/: BUILD.gn  playvibratorcustomstub_fuzzer.cpp  playvibratorcustomstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/playvibratoreffectstub_fuzzer/: BUILD.gn  playvibratoreffectstub_fuzzer.cpp  playvibratoreffectstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/stopvibratorallstub_fuzzer/: BUILD.gn  stopvibratorallstub_fuzzer.cpp  stopvibratorallstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/stopvibratorbymodestub_fuzzer/: BUILD.gn  stopvibratorbymodestub_fuzzer.cpp  stopvibratorbymodestub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/transferclientremoteobjectstub_fuzzer/: BUILD.gn  transferclientremoteobjectstub_fuzzer.cpp  transferclientremoteobjectstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/turnoffstub_fuzzer/: BUILD.gn  turnoffstub_fuzzer.cpp  turnoffstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/turnonstub_fuzzer/: BUILD.gn  turnonstub_fuzzer.cpp  turnonstub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/vibratestub_fuzzer/: BUILD.gn  vibratestub_fuzzer.cpp  vibratestub_fuzzer.h
base/sensors/miscdevice/test/fuzztest/service/vibratoronremoterequest_fuzzer/: BUILD.gn  vibratoronremoterequest_fuzzer.cpp  vibratoronremoterequest_fuzzer.h
base/sensors/miscdevice/test/fuzztest/vibrator/: BUILD.gn
base/sensors/miscdevice/test/fuzztest/vibrator/freevibratorpackage_fuzzer/: BUILD.gn  freevibratorpackage_fuzzer.cpp  freevibratorpackage_fuzzer.h
base/sensors/miscdevice/test/fuzztest/vibrator/getdelaytime_fuzzer/: BUILD.gn  getdelaytime_fuzzer.cpp  getdelaytime_fuzzer.h
base/sensors/miscdevice/test/fuzztest/vibrator/issupporteffect_fuzzer/: BUILD.gn  issupporteffect_fuzzer.cpp
base/sensors/miscdevice/test/unittest/light/: BUILD.gn  light_agent_test.cpp
base/sensors/miscdevice/utils/: BUILD.gn
base/sensors/miscdevice/utils/common/: BUILD.gn
base/sensors/miscdevice/utils/common/include/: file_utils.h  json_parser.h  light_animation_ipc.h  light_info_ipc.h  miscdevice_delayed_sp_singleton.h  miscdevice_log.h  permission_util.h  raw_file_descriptor.h  sensors_errors.h  vibrator_infos.h
base/sensors/miscdevice/utils/common/src/: file_utils.cpp  json_parser.cpp  light_animation_ipc.cpp  light_info_ipc.cpp  miscdevice_common.cpp  permission_util.cpp  vibrator_infos.cpp
base/sensors/miscdevice/utils/haptic_decoder/he_json/: BUILD.gn
base/sensors/miscdevice/utils/haptic_decoder/interface/: i_vibrator_decoder.h  i_vibrator_decoder_factory.h  vibrator_decoder_creator.cpp  vibrator_decoder_creator.h
base/sensors/miscdevice/utils/haptic_decoder/oh_json/: BUILD.gn
drivers/peripheral/myled/hdi_service/: BUILD.gn  myled_interface_driver.cpp  myled_interface_service.cpp  myled_interface_service.h
(+894 files in other folders)
