# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("./../../../miscdevice.gni")

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    "getdelaytimestub_fuzzer:fuzztest",
    "getlightliststub_fuzzer:fuzztest",
    "getvibratorcapacitystub_fuzzer:fuzztest",
    "issupporteffectstub_fuzzer:fuzztest",
    "playpatternstub_fuzzer:fuzztest",
    "playprimitiveeffectstub_fuzzer:fuzztest",
    "playvibratoreffectstub_fuzzer:fuzztest",
    "stopvibratorallstub_fuzzer:fuzztest",
    "stopvibratorbymodestub_fuzzer:fuzztest",
    "transferclientremoteobjectstub_fuzzer:fuzztest",
    "turnoffstub_fuzzer:fuzztest",
    "turnonstub_fuzzer:fuzztest",
    "vibratestub_fuzzer:fuzztest",
    "vibratoronremoterequest_fuzzer:fuzztest",
  ]

  if (miscdevice_feature_vibrator_custom) {
    deps += [ "playvibratorcustomstub_fuzzer:fuzztest" ]
  }
}
