# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../../miscdevice.gni")

ohos_unittest("LightAgentTest") {
  module_out_path = "sensors/miscdevice/test"

  sources = [ "light_agent_test.cpp" ]

  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/inner_api/light",
    "$SUBSYSTEM_DIR/utils/common/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/frameworks/native/light:light_interface_native",
    "$SUBSYSTEM_DIR/utils/common:libmiscdevice_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libprivacy_sdk",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":LightAgentTest" ]
}
