# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("./../../../../miscdevice.gni")

ohos_fuzztest("StartLightFuzzTest") {
  module_out_path = FUZZ_MODULE_OUT_PATH

  fuzz_config_file =
      "$SUBSYSTEM_DIR/test/fuzztest/light/startlight_fuzzer"

  include_dirs = [
    "$SUBSYSTEM_DIR/test/fuzztest/light/startlight_fuzzer",
    "$SUBSYSTEM_DIR/interfaces/inner_api/light",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "startlight_fuzzer.cpp" ]

  deps = [ "$SUBSYSTEM_DIR/frameworks/native/light:light_interface_native" ]

  external_deps = [ "c_utils:utils" ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":StartLightFuzzTest",
  ]
}
