# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../../../miscdevice.gni")

module_output_path = "miscdevice/vibrator"

###############################################################################

ohos_unittest("NativeVibratorTest") {
  module_out_path = module_output_path

  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/kits/c",
    "$SUBSYSTEM_DIR/utils/common/include",
  ]

  sources = [ "vibrator_test.cpp" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
  ]

  deps = [
    "$SUBSYSTEM_DIR/frameworks/capi:ohvibrator",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file =
      "$SUBSYSTEM_DIR/test/unittest/vibrator/capi/resource/ohos_test.xml"
}

###############################################################################
group("unittest") {
  testonly = true
  deps = [ ":NativeVibratorTest" ]
}
