# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../../../miscdevice.gni")

ohos_unittest("VibratorAgentTest") {
  module_out_path = "sensors/miscdevice/test"

  sources = [ "vibrator_agent_test.cpp" ]

  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/inner_api/vibrator",
    "$SUBSYSTEM_DIR/utils/common/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/frameworks/native/vibrator:vibrator_target",
    "$SUBSYSTEM_DIR/utils/common:libmiscdevice_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
  ]

  if (miscdevice_feature_vibrator_custom) {
    resource_config_file =
        "$SUBSYSTEM_DIR/test/unittest/vibrator/native/resource/ohos_test.xml"
  }
}

group("unittest") {
  testonly = true
  deps = [ ":VibratorAgentTest" ]
}
